<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F0E1"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/photo"
            android:scaleType="fitCenter"
            android:src="@drawable/img_onboard_2" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_sarina_regular"
            android:gravity="center"
            android:text="@string/frame"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_medium"
            android:gravity="center"
            android:text="@string/more_than_just_borders"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_light"
            android:gravity="center"
            android:text="@string/stunning_your_photo_with_no_boundary"
            android:textColor="#000000"
            android:textFontWeight="400"
            android:textSize="14sp"
            android:textStyle="normal" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="10dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:background="@drawable/bg_circle_onboard" />
            <View
                android:layout_width="8dp"
                android:layout_height="8dp" />
            <!-- Current page-->
            <View
                android:layout_width="40dp"
                android:layout_height="8dp"
                android:background="@drawable/bg_radius_16" />

            <View
                android:layout_width="8dp"
                android:layout_height="8dp" />

            <View
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:background="@drawable/bg_circle_onboard" />

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/btnNextOnboarding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="16sp" />

    </LinearLayout>


    <FrameLayout
        android:id="@+id/nativeAdView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EDE6D2">

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_container_native"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#EDE6D2" />

        <include
            layout="@layout/native_ads_large"
            android:visibility="invisible" />

    </FrameLayout>
</LinearLayout>