<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/layoutLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/photo"
            android:src="@drawable/app_icon"
            app:shapeAppearanceOverlay="@style/RoundedImageView" />

        <View
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/petitformalscript_regular"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="32sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutWarning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/bannerAdView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ProgressBar
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@color/transparent"
            android:indeterminateTint="@color/black"
            android:progressBackgroundTint="@color/black" />

        <TextView
            android:id="@+id/textWarning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:textColor="@color/black"
            android:text="@string/this_action_may_contain_advertising"
            android:textAlignment="center" />

    </LinearLayout>


    <FrameLayout
        android:id="@+id/bannerAdView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>