<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F0E1"
    android:orientation="vertical">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/photo"
            android:scaleType="centerCrop"
            android:src="@drawable/img_onboard_3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/bottomText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_medium"
                    android:gravity="center"
                    android:text="@string/remove_object"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_light"
                    android:gravity="center"
                    android:text="@string/make_the_object_clean_and_clear"
                    android:textColor="#000000"
                    android:textFontWeight="400"
                    android:textSize="14sp"
                    android:textStyle="normal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingVertical="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="8dp"
                        android:layout_height="8dp"
                        android:background="@drawable/bg_circle_onboard" />

                    <View
                        android:layout_width="8dp"
                        android:layout_height="8dp" />

                    <View
                        android:layout_width="8dp"
                        android:layout_height="8dp"
                        android:background="@drawable/bg_circle_onboard" />

                    <View
                        android:layout_width="8dp"
                        android:layout_height="8dp" />


                    <!-- Current page-->
                    <View
                        android:layout_width="40dp"
                        android:layout_height="8dp"
                        android:background="@drawable/bg_radius_16" />

                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/btnNextOnboarding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:text="@string/next"
                    android:textAllCaps="false"
                    android:textColor="#000000"
                    android:textSize="16sp" />

            </LinearLayout>
        </LinearLayout>


    </FrameLayout>


    <FrameLayout
        android:id="@+id/nativeAdView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EDE6D2">

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_container_native"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#EDE6D2" />

        <include
            layout="@layout/native_ads_large"
            android:visibility="invisible" />

    </FrameLayout>
</LinearLayout>